<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".details.DetailsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/details_container" android:paddingStart="5dp"
            android:paddingEnd="5dp">


        <ImageView
                android:src="@mipmap/ic_launcher_round"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:id="@+id/imageDrone"
                android:contentDescription="@string/icd_item_image" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:scaleType="centerCrop"/>
        <TextView
                android:text="@string/frag_details_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textTitleName" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageDrone"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textColor="@android:color/black"
                android:textSize="16sp" android:layout_marginTop="24dp"/>
        <TextView
                android:text="@string/frag_details_title_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textTitleType" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textTitleName" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black" android:textSize="16sp"/>
        <TextView
                android:text="@string/frag_details_title_fc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textTitleFC" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textTitleType" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black" android:textSize="16sp"/>
        <TextView
                android:text="@string/frag_details_title_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textTitleSize" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textTitleFC" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black" android:textSize="16sp"/>
        <TextView
                android:text="@string/frag_details_value_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textValueFC" app:layout_constraintStart_toEndOf="@+id/textTitleFC"
                android:layout_marginStart="20dp" app:layout_constraintTop_toTopOf="@+id/textTitleFC"/>
        <TextView
                android:text="@string/frag_details_value_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textValueName"
                app:layout_constraintTop_toTopOf="@+id/textTitleName"
                app:layout_constraintStart_toStartOf="@+id/textValueType"/>
        <TextView
                android:text="@string/frag_details_value_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textValueType" app:layout_constraintStart_toStartOf="@+id/textValueFC"
                app:layout_constraintTop_toTopOf="@+id/textTitleType"/>
        <TextView
                android:text="@string/frag_details_value_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textValueSize"
                app:layout_constraintStart_toStartOf="@+id/textValueFC"
                app:layout_constraintTop_toTopOf="@+id/textTitleSize"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>