<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       android:id="@+id/item_container" android:paddingBottom="16dp">
        <ImageView
                android:id="@+id/imageDrone"
                android:layout_width="0dp"
                android:layout_height="200dp" app:srcCompat="@mipmap/ic_launcher_round"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/icd_item_image"
                app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"/>

        <TextView
                android:id="@+id/textDroneName"
                android:text="@string/item_no_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toEndOf="@+id/imageThumbnail" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/imageThumbnail"
                android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/textDroneType"
                android:text="@string/item_no_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textDroneName"
                app:layout_constraintStart_toStartOf="@+id/textDroneName"/>
        <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp" app:srcCompat="@mipmap/ic_launcher_round"
                android:id="@+id/imageThumbnail" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageDrone" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:contentDescription="@string/icd_item_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
